update readme again

--- a/README
+++ b/README
@@ -3,4 +3,4 @@ install library with pip:
     pip install -r requirements.txt
 run test-case:
     robot test-case-file.robot
-    robot --include tad-name test-case-file.robot
+    robot --include tag-name test-case-file.robot
